--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "source": [
     "#Cleaning data although degree data is relatively clean with pandas \r\n",
     "import pandas as pd \r\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "source": [
     "#pulling initial employment info \r\n",
     "employment_file = (\"Resources\\Employment Info 2002-2018.xlsx\")\r\n",
@@ -225,14 +225,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 67
+     "execution_count": 2
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "source": [
     "#renaming employment info columns \r\n",
     "\r\n",
@@ -483,14 +483,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 68
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "source": [
     "#saving final unemployment info dataframe \r\n",
     "\r\n",
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "source": [
     "#file path for initial data frame \r\n",
     "\r\n",
@@ -777,14 +777,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 70
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "source": [
     "# renaming columns \r\n",
     "\r\n",
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "source": [
     "#Grabbing needed poverty rate columns \r\n",
     "\r\n",
@@ -901,14 +901,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 72
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "source": [
     "#Removing state and county ID as they are not needed\r\n",
     "\r\n",
@@ -1047,14 +1047,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 73
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "source": [
     "#saving final employment rate / median income file \r\n",
     "\r\n",
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "source": [
     "#file path for initial  degrees data frame \r\n",
     "\r\n",
@@ -1079,7 +1079,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "C:\\Users\\Antwon\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\openpyxl\\worksheet\\header_footer.py:48: UserWarning: Cannot parse header or footer so it will be ignored\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\openpyxl\\worksheet\\header_footer.py:48: UserWarning: Cannot parse header or footer so it will be ignored\n",
       "  warn(\"\"\"Cannot parse header or footer so it will be ignored\"\"\")\n"
      ]
     },
@@ -1287,14 +1287,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 75
+     "execution_count": 10
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "source": [
     "#dropping subject field as it is not needed for analysis \r\n",
     "\r\n",
@@ -1499,14 +1499,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "source": [
     "#drop rows if entire row is zero \r\n",
     "\r\n",
@@ -1711,14 +1711,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "source": [
     "#getting degree options to clean \r\n",
     "\r\n",
@@ -1749,14 +1749,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 78
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "source": [
     "#deleting rows that do not contain Bachelors or Masters\r\n",
     "# df.columns"
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "source": [
     "df.drop(df[df[\"Level of Degree or Certificate\"] == \"Associate Degree\"].index, inplace=True)\r\n",
     "df.drop(df[df[\"Level of Degree or Certificate\"] == \"One to less than Two-Year Award\"].index, inplace=True)\r\n",
@@ -1983,14 +1983,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 80
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "source": [
     "#making sure I have degrees desired for analysis \r\n",
     "df[\"Level of Degree or Certificate\"].value_counts()"
@@ -2006,14 +2006,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 81
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "source": [
     "#Checking if there are errors in Discipline Area \r\n",
     "\r\n",
@@ -2039,7 +2039,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 17
     }
    ],
    "metadata": {}
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "source": [
     "#checking for variances in Institution name \r\n",
     "\r\n",
@@ -2064,29 +2064,29 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Ohio State University                                   444\n",
-       "University of Cincinnati                                399\n",
-       "University of Akron                                     373\n",
-       "Bowling Green State University                          359\n",
-       "Ohio University                                         341\n",
-       "                                                       ... \n",
-       "GOOD SAMARITAN COLLEGE OF NURSING AND HEALTH SCIENCE      1\n",
-       "CHAMBERLAIN UNIVERSITY-OHIO                               1\n",
-       "AULTMAN COLLEGE OF NURSING AND HEALTH SCIENCES            1\n",
-       "CHAMBERLAIN COLLEGE OF NURSING–COLUMBUS CAMPUS            1\n",
-       "CHAMBERLAIN COLLEGE OF NURSING-OHIO                       1\n",
+       "Ohio State University                                 444\n",
+       "University of Cincinnati                              399\n",
+       "University of Akron                                   373\n",
+       "Bowling Green State University                        359\n",
+       "Ohio University                                       341\n",
+       "                                                     ... \n",
+       "CHAMBERLAIN UNIVERSITY-OHIO                             1\n",
+       "THE CHRIST COLLEGE OF NURSING AND HEALTH SCIENCES       1\n",
+       "HONDROS COLLEGE                                         1\n",
+       "ASHLAND UNIVERSITY DWIGHT SCHAR COLLEGE OF NURSING      1\n",
+       "HONDROS COLLEGE OF NURSING                              1\n",
        "Name: Institution, Length: 144, dtype: int64"
       ]
      },
      "metadata": {},
-     "execution_count": 83
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "source": [
     "#replacing St Joseph institution name\r\n",
     "\r\n",
@@ -2291,14 +2291,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 84
+     "execution_count": 19
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "source": [
     "#adding a \"Total degrees\" column that will sum the total degrees given from 2002 - 2018 \r\n",
     "\r\n",
@@ -2306,14 +2306,6 @@
     "df.head()"
    ],
    "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "C:\\Users\\Antwon\\AppData\\Local\\Temp/ipykernel_6696/2144199560.py:3: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  df[\"Total Degrees\"] = df.sum(axis= 1)\n"
-     ]
-    },
     {
      "output_type": "execute_result",
      "data": {
@@ -2511,14 +2503,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 85
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "source": [
     "#saving final cleaned degree data \r\n",
     "\r\n",
@@ -2529,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "source": [
     "#pulling in final cleaned files \r\n",
     "\r\n",
@@ -2736,14 +2728,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 87
+     "execution_count": 22
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 23,
    "source": [
     "file2 = (\"Resources\\FinalEmployment&Income.csv\")\r\n",
     "\r\n",
@@ -2829,14 +2821,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 88
+     "execution_count": 23
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 24,
    "source": [
     "file3 = (\"Resources\\FinalUnemploymentInfo.xlsx\")\r\n",
     "\r\n",
@@ -3068,7 +3060,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 89
+     "execution_count": 24
     }
    ],
    "metadata": {}
@@ -3078,7 +3070,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.6",
+   "version": "3.8.8",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -3090,10 +3082,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "interpreter": {
-   "hash": "c36b75ead49fede5ca4c7f5a618ce1e3bfb4b3a0f4512cc32c001d2e83619906"
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
