--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "source": [
     "#Cleaning data although degree data is relatively clean with pandas \r\n",
     "import pandas as pd \r\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "source": [
     "#pulling initial employment info \r\n",
     "employment_file = (\"Resources\\Employment Info 2002-2018.xlsx\")\r\n",
@@ -225,14 +225,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 67
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "source": [
     "#renaming employment info columns \r\n",
     "\r\n",
@@ -483,14 +483,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 68
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "source": [
     "#saving final unemployment info dataframe \r\n",
     "\r\n",
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "source": [
     "#file path for initial data frame \r\n",
     "\r\n",
@@ -777,14 +777,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 70
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "source": [
     "# renaming columns \r\n",
     "\r\n",
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "source": [
     "#Grabbing needed poverty rate columns \r\n",
     "\r\n",
@@ -901,14 +901,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 72
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "source": [
     "#Removing state and county ID as they are not needed\r\n",
     "\r\n",
@@ -1047,14 +1047,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 73
+     "execution_count": 10
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "source": [
     "#saving final employment rate / median income file \r\n",
     "\r\n",
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "source": [
     "#file path for initial  degrees data frame \r\n",
     "\r\n",
@@ -1287,14 +1287,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 75
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "source": [
     "#dropping subject field as it is not needed for analysis \r\n",
     "\r\n",
@@ -1499,14 +1499,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "source": [
     "#drop rows if entire row is zero \r\n",
     "\r\n",
@@ -1711,14 +1711,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 14
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "source": [
     "#getting degree options to clean \r\n",
     "\r\n",
@@ -1749,14 +1749,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 78
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "source": [
     "#deleting rows that do not contain Bachelors or Masters\r\n",
     "# df.columns"
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "source": [
     "df.drop(df[df[\"Level of Degree or Certificate\"] == \"Associate Degree\"].index, inplace=True)\r\n",
     "df.drop(df[df[\"Level of Degree or Certificate\"] == \"One to less than Two-Year Award\"].index, inplace=True)\r\n",
@@ -1983,14 +1983,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 80
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "source": [
     "#making sure I have degrees desired for analysis \r\n",
     "df[\"Level of Degree or Certificate\"].value_counts()"
@@ -2006,14 +2006,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 81
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "source": [
     "#Checking if there are errors in Discipline Area \r\n",
     "\r\n",
@@ -2039,7 +2039,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 19
     }
    ],
    "metadata": {}
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "source": [
     "#checking for variances in Institution name \r\n",
     "\r\n",
@@ -2079,14 +2079,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 83
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "source": [
     "#replacing St Joseph institution name\r\n",
     "\r\n",
@@ -2291,14 +2291,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 84
+     "execution_count": 21
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "source": [
     "#adding a \"Total degrees\" column that will sum the total degrees given from 2002 - 2018 \r\n",
     "\r\n",
@@ -2310,7 +2310,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "C:\\Users\\Antwon\\AppData\\Local\\Temp/ipykernel_6696/2144199560.py:3: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "C:\\Users\\Antwon\\AppData\\Local\\Temp/ipykernel_1248/2144199560.py:3: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  df[\"Total Degrees\"] = df.sum(axis= 1)\n"
      ]
     },
@@ -2511,14 +2511,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 85
+     "execution_count": 22
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "source": [
     "#saving final cleaned degree data \r\n",
     "\r\n",
@@ -2529,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "source": [
     "#pulling in final cleaned files \r\n",
     "\r\n",
@@ -2736,14 +2736,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 87
+     "execution_count": 24
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "source": [
     "file2 = (\"Resources\\FinalEmployment&Income.csv\")\r\n",
     "\r\n",
@@ -2829,14 +2829,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 88
+     "execution_count": 25
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 26,
    "source": [
     "file3 = (\"Resources\\FinalUnemploymentInfo.xlsx\")\r\n",
     "\r\n",
@@ -3068,7 +3068,258 @@
       ]
      },
      "metadata": {},
-     "execution_count": 89
+     "execution_count": 26
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "df3[\"Unemployment Average\"] = df3.mean(axis=1 )\r\n",
+    "df3.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Users\\Antwon\\AppData\\Local\\Temp/ipykernel_1248/3404078222.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  df3[\"Unemployment Average\"] = df3.mean(axis=1 )\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>County</th>\n",
+       "      <th>2002 Unemployment Percent</th>\n",
+       "      <th>2003 Unemployment Percent</th>\n",
+       "      <th>2004 Unemployment Percent</th>\n",
+       "      <th>2005 Unemployment Percent</th>\n",
+       "      <th>2006 Unemployment Percent</th>\n",
+       "      <th>2007 Unemployment Percent</th>\n",
+       "      <th>2008 Unemployment Percent</th>\n",
+       "      <th>2009 Unemployment Percent</th>\n",
+       "      <th>2010 Unemployment Percent</th>\n",
+       "      <th>2011 Unemployment Percent</th>\n",
+       "      <th>2012 Unemployment Percent</th>\n",
+       "      <th>2013 Unemployment Percent</th>\n",
+       "      <th>2014 Unemployment Percent</th>\n",
+       "      <th>2015 Unemployment Percent</th>\n",
+       "      <th>2016 Unemployment Percent</th>\n",
+       "      <th>2017 Unemployment Percent</th>\n",
+       "      <th>2018 Unemployment Percent</th>\n",
+       "      <th>Unemployment Average</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>5.788149</td>\n",
+       "      <td>5.9835</td>\n",
+       "      <td>5.527962</td>\n",
+       "      <td>5.112026</td>\n",
+       "      <td>4.630434</td>\n",
+       "      <td>4.622425</td>\n",
+       "      <td>5.78865</td>\n",
+       "      <td>9.251236</td>\n",
+       "      <td>9.633887</td>\n",
+       "      <td>8.951434</td>\n",
+       "      <td>8.069576</td>\n",
+       "      <td>7.374532</td>\n",
+       "      <td>6.1674</td>\n",
+       "      <td>5.282897</td>\n",
+       "      <td>4.868823</td>\n",
+       "      <td>4.354932</td>\n",
+       "      <td>3.89528</td>\n",
+       "      <td>6.194303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>6.2000</td>\n",
+       "      <td>6.300000</td>\n",
+       "      <td>5.900000</td>\n",
+       "      <td>5.400000</td>\n",
+       "      <td>5.600000</td>\n",
+       "      <td>6.60000</td>\n",
+       "      <td>10.200000</td>\n",
+       "      <td>10.300000</td>\n",
+       "      <td>8.800000</td>\n",
+       "      <td>7.400000</td>\n",
+       "      <td>7.500000</td>\n",
+       "      <td>5.8000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.50000</td>\n",
+       "      <td>6.547059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>Adams County</td>\n",
+       "      <td>9.900000</td>\n",
+       "      <td>10.0000</td>\n",
+       "      <td>9.800000</td>\n",
+       "      <td>8.500000</td>\n",
+       "      <td>7.600000</td>\n",
+       "      <td>7.700000</td>\n",
+       "      <td>9.40000</td>\n",
+       "      <td>14.600000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>14.300000</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>12.700000</td>\n",
+       "      <td>9.2000</td>\n",
+       "      <td>7.900000</td>\n",
+       "      <td>7.600000</td>\n",
+       "      <td>7.200000</td>\n",
+       "      <td>7.00000</td>\n",
+       "      <td>10.111765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>Allen County</td>\n",
+       "      <td>6.600000</td>\n",
+       "      <td>6.9000</td>\n",
+       "      <td>6.800000</td>\n",
+       "      <td>6.300000</td>\n",
+       "      <td>6.100000</td>\n",
+       "      <td>6.300000</td>\n",
+       "      <td>7.50000</td>\n",
+       "      <td>11.300000</td>\n",
+       "      <td>10.700000</td>\n",
+       "      <td>9.500000</td>\n",
+       "      <td>7.700000</td>\n",
+       "      <td>7.800000</td>\n",
+       "      <td>5.8000</td>\n",
+       "      <td>4.900000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.50000</td>\n",
+       "      <td>6.982353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>Ashland County</td>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>7.0000</td>\n",
+       "      <td>7.300000</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>5.500000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>7.60000</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>11.900000</td>\n",
+       "      <td>9.900000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.100000</td>\n",
+       "      <td>6.0000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>4.900000</td>\n",
+       "      <td>4.60000</td>\n",
+       "      <td>7.200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  State          County  2002 Unemployment Percent  2003 Unemployment Percent  \\\n",
+       "0    US   United States                   5.788149                     5.9835   \n",
+       "1    OH            Ohio                   5.800000                     6.2000   \n",
+       "2    OH    Adams County                   9.900000                    10.0000   \n",
+       "3    OH    Allen County                   6.600000                     6.9000   \n",
+       "4    OH  Ashland County                   6.400000                     7.0000   \n",
+       "\n",
+       "   2004 Unemployment Percent  2005 Unemployment Percent  \\\n",
+       "0                   5.527962                   5.112026   \n",
+       "1                   6.300000                   5.900000   \n",
+       "2                   9.800000                   8.500000   \n",
+       "3                   6.800000                   6.300000   \n",
+       "4                   7.300000                   6.500000   \n",
+       "\n",
+       "   2006 Unemployment Percent  2007 Unemployment Percent  \\\n",
+       "0                   4.630434                   4.622425   \n",
+       "1                   5.400000                   5.600000   \n",
+       "2                   7.600000                   7.700000   \n",
+       "3                   6.100000                   6.300000   \n",
+       "4                   5.500000                   6.000000   \n",
+       "\n",
+       "   2008 Unemployment Percent  2009 Unemployment Percent  \\\n",
+       "0                    5.78865                   9.251236   \n",
+       "1                    6.60000                  10.200000   \n",
+       "2                    9.40000                  14.600000   \n",
+       "3                    7.50000                  11.300000   \n",
+       "4                    7.60000                  12.500000   \n",
+       "\n",
+       "   2010 Unemployment Percent  2011 Unemployment Percent  \\\n",
+       "0                   9.633887                   8.951434   \n",
+       "1                  10.300000                   8.800000   \n",
+       "2                  16.000000                  14.300000   \n",
+       "3                  10.700000                   9.500000   \n",
+       "4                  11.900000                   9.900000   \n",
+       "\n",
+       "   2012 Unemployment Percent  2013 Unemployment Percent  \\\n",
+       "0                   8.069576                   7.374532   \n",
+       "1                   7.400000                   7.500000   \n",
+       "2                  12.500000                  12.700000   \n",
+       "3                   7.700000                   7.800000   \n",
+       "4                   8.000000                   8.100000   \n",
+       "\n",
+       "   2014 Unemployment Percent  2015 Unemployment Percent  \\\n",
+       "0                     6.1674                   5.282897   \n",
+       "1                     5.8000                   5.000000   \n",
+       "2                     9.2000                   7.900000   \n",
+       "3                     5.8000                   4.900000   \n",
+       "4                     6.0000                   5.100000   \n",
+       "\n",
+       "   2016 Unemployment Percent  2017 Unemployment Percent  \\\n",
+       "0                   4.868823                   4.354932   \n",
+       "1                   5.000000                   5.000000   \n",
+       "2                   7.600000                   7.200000   \n",
+       "3                   5.000000                   5.000000   \n",
+       "4                   5.100000                   4.900000   \n",
+       "\n",
+       "   2018 Unemployment Percent  Unemployment Average  \n",
+       "0                    3.89528              6.194303  \n",
+       "1                    4.50000              6.547059  \n",
+       "2                    7.00000             10.111765  \n",
+       "3                    4.50000              6.982353  \n",
+       "4                    4.60000              7.200000  "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
     }
    ],
    "metadata": {}
